# vacUMRR

./: CMakeLists.txt
Apps/: CMakeLists.txt
Apps/ClientTest_01/: CMakeLists.txt  client.cpp  client.h  main.cpp
Apps/JasonTest_01/: CMakeLists.txt  JasonTest_01.cpp
Apps/MysqlTest_01/: CMakeLists.txt  MysqlTest_01.cpp
Apps/ServerTest_01/: CMakeLists.txt  main.cpp  server.cpp  server.h
Apps/pTreadTest_01/: CMakeLists.txt  pTreadTest_01.cpp
ExtLibs/: CMakeLists.txt
ExtLibs/dataparse/include/: vacAlgorithm.h  vacDataMatter.h  vacParser.h
ExtLibs/dataparse/lib/: vacDataParse_d.lib
ExtLibs/lib_json/: CMakeLists.txt
ExtLibs/mysql/lib/: mysqlservices.lib
VAClass/: CMakeLists.txt
VAClass/OtherHeader/: CMakeLists.txt  vacRadarCommon.h
VAClass/vacNetRec/: CMakeLists.txt  vacNetRec.cpp  vacNetRec.h
VAClass/vacNetSend/: CMakeLists.txt  vacNetSend.cpp  vacNetSend.h
